# word-games

./: README.md  word-games.cabal
src/: Hangman.hs  MainHangman.hs  MainWordle.hs  WordList.hs  Wordle.hs
tests/: tests.hs
